syntax = "proto3";

option go_package = "./routeguide";

package routeguide;

service TokenService {
    rpc FindLeaderRequest(LeaderRequest) returns (LeaderResponse) {}
    rpc SendTokenRequest(TokenRequest) returns (TokenResponse) {}
}

message LeaderRequest {
    bool lookingForLeader = 1;
    int32 lowestPort = 2;
}

message LeaderResponse {
    bool lookingForLeader = 1;
    int32 lowestPort = 2;
}

message TokenRequest {
    int32 status = 1;
    string message = 2;
}

message TokenResponse {
    int32 status = 1;
    string message = 2;
}